[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom-logging"
version = "0.1.0"
description = "Enhanced logging utility with colored output, user context tracking, and automatic truncation"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.8"
authors = [
    {name = "Xavier", email = "collantes.xavier@gmail.com"}
]
keywords = ["logging", "logger", "colored", "enhanced", "debugging", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/yourusername/custom-logging"
Repository = "https://github.com/yourusername/custom-logging"
Issues = "https://github.com/yourusername/custom-logging/issues"

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "custom_logging/__init__.py"
"enhanced_logger.py" = "custom_logging/enhanced_logger.py"

[tool.hatch.build.targets.sdist]
include = [
    "__init__.py",
    "enhanced_logger.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

